# compass-main_local

compass-main/: .codespellignore  .flake8  .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.rst  pyproject.toml  pytest.ini  set_PRIVATE_PYPI_PAT_to_env.bat  setup_environment.bat  start_app.bat  tox.ini
compass-main/.github/workflows/: deployment.yml  python-package.yml
compass-main/doc/source/: conf.py  index.rst
compass-main/files/input/: my_geom.sat
compass-main/requirements/: requirements_build.txt  requirements_tests.txt
compass-main/src/ansys/solutions/compass/: .gitignore  setup.py
compass-main/src/ansys/solutions/compass/compass/: main.py
compass-main/src/ansys/solutions/compass/compass/report/: report_content_generator.py  report_dash_renderer.py  report_dto.py  report_export_document.py  report_ids.py  report_section.py  report_table.py
compass-main/src/ansys/solutions/compass/compass/scripts/: cad_viewer.py  generate_cad.py  maxwell2D.py  session_setup.py  thermal.py  utils.py
compass-main/src/ansys/solutions/compass/compass/scripts/assets/: Leaf360_for_script.scdoc  Materials.xml  mechanical_script.py  scdm_generate_cad.py
compass-main/src/ansys/solutions/compass/compass/solution/: definition.py  electromagnetics_results_step.py  electromagnetics_setup_step.py  report_step.py  thermal_results_step.py  thermal_setup_step.py
compass-main/src/ansys/solutions/compass/compass/ui/: app.py  components.py  electromagnetics_results.py  electromagnetics_setup.py  page.py  report.py  thermal_results.py  thermal_setup.py
compass-main/src/ansys/solutions/compass/compass/ui/assets/: ANSYSViewer-max.js  set-cad_viewer.js  style.css  viewer-loader-max.js
compass-main/src/ansys/solutions/compass/compass/ui/assets/utils/: js-unzip.js
compass-main/tests/: __init__.py  conftest.py  integration_test.py  test_main.py  test_report_view.py
