[build-system]
requires = ["poetry-core>=1.0.0,<1.3.0", "setuptools>=65.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ansys-solutions-compass"
version = "0.0.0.dev0"
description = "Vertical solution to predict electric motor thermal losses"
license = "Proprietary"
authors = ["ANSYS, Inc. <solution-applications.maintainers@ansys.com>"]
maintainers = ["ANSYS, Inc. <solution-applications.maintainers@ansys.com>"]
readme = "README.rst"
repository = "https://github.com/Solution-Applications/compass.git"
documentation = "https://github.com/Solution-Applications/compass.git"
keywords = ["python", "solution application", "saf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Other Audience",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering"
]
packages = [
    { include = "ansys", from = "src" },
]

[[tool.poetry.source]]
name = "pyansys-private-pypi"
url = "https://pkgs.dev.azure.com/pyansys/_packaging/pyansys/pypi/simple/"
default = false
secondary = true

[[tool.poetry.source]]
name = "solutions-private-pypi"
url = "https://pkgs.dev.azure.com/pyansys/_packaging/ansys-solutions/pypi/simple/"
default = false
secondary = true

[tool.poetry.dependencies]
python = "^3.7, <3.9"
ansys-dash-treeview = {version = "0.0.1.dev0", source = "solutions-private-pypi"}
ansys-discovery = {version = "0.1.2", source = "pyansys-private-pypi"}
ansys-mechanical-core = {version = "0.6.0", source = "pyansys-private-pypi"}
ansys-report-sdk = {version = "0.0.1a0", source = "pyansys-private-pypi"}
ansys-saf-sdk = {version = "1.0.0.dev66", source = "solutions-private-pypi" }
chromedriver-autoinstaller = {version = "0.4.0"}
dash = {version = "2.6.1"}
dash_bootstrap_components = {version = "1.2.1"}
dash-extensions = {version = "0.1.3"}
dash-iconify = {version = "0.1.2"}
dash-uploader = {version = "0.6.0"} 
docx = {version = "0.2.4"} 
docx2pdf = {version = "0.1.8"}
geckodriver-autoinstaller = {version = "0.1.0"}
keyring={ version = "23.0.1"}
pandas = {version = "1.3.3", python=">=3.7.1"}
pyaedt = {version = "0.4.88"}
pytest-selenium = {version = "4.0.0"}
pythonnet = {version = "2.5.2"} 
python-docx = {version = "0.8.11"}
selenium = {version = "4.4.3"}

[tool.poetry.dev-dependencies]

[tool.poetry.extras]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 120
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.solutions"]

[tool.coverage.report]
show_missing = true
